[tool.poetry]
name = "db-api"
version = "0.1.0"
description = "A short description of the project"
authors = ["loe <Law_Of_Evi1@mail.ru>"]
readme = "README.md"

packages = [
    { include = "app" },
    { include = "config" },
    { include = "db" }
]

[tool.poetry.dependencies]
python = ">=3.12"
sqlalchemy = ">=2.0.40,<3.0.0"
alembic = ">=1.15.2,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
pydantic = ">=2.11.3,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }
uvicorn = ">=0.34.1,<0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
